Add CMS admin panel for i18n management
- Add PostgreSQL-backed admin panel at /nora/admin/
- Login system with role-based access (admin vs regional)
- Tree-view editor for i18n JSON structure
- API endpoints: /api/auth/login, /api/i18n/[lang], /api/init-db
- Client-side override fetching via data-i18n attributes
- Switch to Astro server mode with static prerendering
- Also includes: trust badge update, HubSpot analytics, cookie fix

--- a/astro-site/package.json
+++ b/astro-site/package.json
@@ -9,7 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.5.2",
     "@astrojs/sitemap": "^3.7.0",
-    "astro": "^5.16.15"
+    "astro": "^5.16.15",
+    "bcryptjs": "^3.0.3",
+    "jsonwebtoken": "^9.0.3",
+    "pg": "^8.18.0"
   }
 }
